--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "material-components-web": "^14.0.0",
     "rxjs": "~7.5.0",
     "zone.js": "~0.11.4"
   },
