--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
-              "src/styles.sass"
+              "src/styles.sass",
+              "src/bb-theme.scss"
             ],
             "scripts": []
           },
