--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "material-components-web": "^14.0.0",
+    "mdb-angular-ui-kit": "^3.0.0",
     "rxjs": "~7.5.0",
     "zone.js": "~0.11.4"
   },
